--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "react": "^16.10.2",
+    "react-anime": "^2.2.0",
+    "react-animejs": "^0.5.3",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
